[gd_scene load_steps=10 format=3 uid="uid://rhicuqvd5uu4"]

[ext_resource type="Script" path="res://puzzle_elements/puzzle_grid.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b5bgacwdhjj50" path="res://sprites/puzzles/screen_frame/bottom_left.png" id="2"]
[ext_resource type="Texture2D" uid="uid://lk5en33cpxm1" path="res://sprites/puzzles/screen_frame/edge.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bo1q5kiqntoep" path="res://sprites/puzzles/screen_frame/top_left.png" id="4"]
[ext_resource type="Texture2D" uid="uid://y8icqnx3x0xo" path="res://sprites/puzzles/screen_frame/top_right.png" id="5"]
[ext_resource type="Texture2D" uid="uid://da1nef11lf22s" path="res://sprites/puzzles/screen_frame/bottom_right.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bbgrjd16jdokw" path="res://sprites/puzzles/screen_frame/background.png" id="7_dlpch"]
[ext_resource type="Script" path="res://material_area.gd" id="8_a2c7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g165b"]
resource_local_to_scene = true

[node name="PuzzleGrid" type="Node2D" groups=["Puzzle", "PuzzleGrid"]]
script = ExtResource("1")

[node name="NoNode" type="Node2D" parent="."]

[node name="Frame" type="Node2D" parent="NoNode"]

[node name="BottomLeft" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-10, -5)
texture = ExtResource("2")
centered = false

[node name="BottomRight" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-6, -5)
texture = ExtResource("6")
centered = false

[node name="Top" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-6, -10)
rotation = 1.5708
scale = Vector2(1, 14)
texture = ExtResource("3")
centered = false
offset = Vector2(0, -1)

[node name="Bottom" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-6, 8)
rotation = -1.5708
scale = Vector2(1, 14)
texture = ExtResource("3")
centered = false
offset = Vector2(-3, 0)

[node name="Left" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-10, -7)
scale = Vector2(1, 14)
texture = ExtResource("3")
centered = false

[node name="Right" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(7, -7)
rotation = 3.14159
scale = Vector2(1, 14)
texture = ExtResource("3")
centered = false
offset = Vector2(-3, -1)

[node name="TopLeft" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-10, -10)
texture = ExtResource("4")
centered = false

[node name="TopRight" type="Sprite2D" parent="NoNode/Frame"]
position = Vector2(-6, -10)
texture = ExtResource("5")
centered = false

[node name="Background" type="Sprite2D" parent="NoNode/Frame"]
modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
texture_repeat = 2
position = Vector2(-8, -8)
scale = Vector2(15, 8)
texture = ExtResource("7_dlpch")
centered = false

[node name="Lines" type="Node2D" parent="NoNode"]

[node name="VisibilityCheck" type="VisibleOnScreenNotifier2D" parent="NoNode"]
rect = Rect2(0, 0, 0, 0)

[node name="metal" type="Area2D" parent="NoNode" groups=["MaterialAreas"]]
collision_layer = 4
priority = 2
script = ExtResource("8_a2c7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoNode/metal"]
shape = SubResource("RectangleShape2D_g165b")

[connection signal="screen_entered" from="NoNode/VisibilityCheck" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="NoNode/VisibilityCheck" to="." method="_on_screen_exited"]
